--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "webpack-dev-server --hot --inline --config config/webpack.dev.js --progress",
-    "start-aot": "ngc -p tsconfig-aot.json && webpack-dev-server --hot --inline --config config/webpack.dev.js --progress",
+    "start-aot": "webpack --config config/webpack.prod.js --progress",
     "build:dev": "webpack-dev-server --config config/webpack.dev.js --progress --profile",
     "lint": "tslint --noUnusedParameters -noUnusedLocals --force \"src/**/*.ts\"",
     "test": "karma start",
@@ -17,75 +17,82 @@
     "url": "https://github.com/xtianus79/angular-enterprise-template"
   },
   "dependencies": {
-    "angular-calendar": "0.14.0",
-    "angular-in-memory-web-api": "0.3.1",
+    "angular-calendar": "0.18.3",
+    "angular-in-memory-web-api": "0.3.2",
     "angular2-material-datepicker": "0.5.0",
     "core-js": "2.4.1",
+    "font-awesome": "4.7.0",
     "hammerjs": "2.0.8",
     "immutable": "3.8.1",
+    "jquery": "3.2.1",
+    "jquery-ui-dist": "1.12.1",
     "moment": "2.18.1",
     "multiple-date-picker-a2": "2.5.3",
-    "ngx-pagination": "3.0.0",
-    "ramda": "0.23.0",
-    "redux": "3.6.0",
+    "ng-semantic": "1.1.13",
+    "ngx-pagination": "3.0.1",
+    "primeng": "4.1.0-rc.3",
+    "ramda": "0.24.1",
+    "redux": "3.7.1",
     "redux-thunk": "2.2.0",
     "reflect-metadata": "0.1.10",
-    "rxjs": "5.3.0",
+    "rxjs": "5.4.2",
     "semantic-ui": "2.2.10",
-    "zone.js": "0.8.9"
+    "zone.js": "0.8.12"
   },
   "devDependencies": {
-    "@angular/animations": "4.0.3",
-    "@angular/common": "4.0.3",
-    "@angular/compiler": "4.0.3",
-    "@angular/compiler-cli": "4.0.3",
-    "@angular/core": "4.0.3",
-    "@angular/forms": "4.0.3",
-    "@angular/http": "4.0.3",
-    "@angular/material": "2.0.0-beta.3",
-    "@angular/platform-browser": "4.0.3",
-    "@angular/platform-browser-dynamic": "4.0.3",
-    "@angular/platform-server": "4.0.3",
-    "@angular/router": "4.0.3",
+    "@angular/animations": "4.2.5",
+    "@angular/common": "4.2.5",
+    "@angular/compiler": "4.2.5",
+    "@angular/compiler-cli": "4.2.5",
+    "@angular/core": "4.2.5",
+    "@angular/forms": "4.2.5",
+    "@angular/http": "4.2.5",
+    "@angular/material": "2.0.0-beta.7",
+    "@angular/platform-browser": "4.2.5",
+    "@angular/platform-browser-dynamic": "4.2.5",
+    "@angular/platform-server": "4.2.5",
+    "@angular/router": "4.2.5",
     "@angularclass/hmr": "1.2.2",
     "@angularclass/hmr-loader": "3.0.2",
-    "@types/chai": "3.5.1",
-    "@types/core-js": "0.9.41",
+    "@ngtools/webpack": "^1.5.0",
+    "@types/chai": "4.0.1",
+    "@types/core-js": "0.9.42",
     "@types/hammerjs": "2.0.34",
-    "@types/jasmine": "2.5.47",
-    "@types/node": "7.0.13",
-    "@types/selenium-webdriver": "3.0.3",
+    "@types/jasmine": "2.5.53",
+    "@types/node": "8.0.5",
+    "@types/ramda": "0.24.0",
+    "@types/selenium-webdriver": "3.0.4",
     "@types/source-map": "0.5.0",
-    "@types/uglify-js": "2.6.28",
-    "@types/webpack": "2.2.15",
-    "@types/ramda": "0.0.7",
+    "@types/uglify-js": "2.6.29",
+    "@types/webpack": "3.0.1",
+    "angular-2-local-storage": "1.0.1",
     "angular2-template-loader": "0.6.2",
-    "awesome-typescript-loader": "3.1.2",
-    "codelyzer": "3.0.0",
-    "css-loader": "0.28.0",
-    "css-to-string-loader": "0.1.2",
-    "extract-text-webpack-plugin": "2.1.0",
-    "file-loader": "0.11.1",
+    "awesome-typescript-loader": "3.2.1",
+    "codelyzer": "3.1.1",
+    "css-loader": "0.28.4",
+    "css-to-string-loader": "0.1.3",
+    "extract-text-webpack-plugin": "2.1.2",
+    "file-loader": "0.11.2",
     "html-loader": "0.4.5",
-    "html-webpack-plugin": "2.28.0",
+    "html-webpack-plugin": "2.29.0",
     "isomorphic-style-loader": "2.0.0",
-    "jasmine-core": "2.6.0",
-    "karma": "1.6.0",
+    "jasmine-core": "2.6.4",
+    "karma": "1.7.0",
     "karma-jasmine": "1.1.0",
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "2.0.3",
-    "node-sass": "4.5.2",
+    "node-sass": "4.5.3",
     "null-loader": "0.1.1",
-    "postcss-loader": "1.3.3",
+    "postcss-loader": "2.0.6",
     "raw-loader": "0.5.1",
     "rimraf": "2.6.1",
-    "sass-loader": "6.0.3",
-    "style-loader": "0.16.1",
+    "sass-loader": "6.0.6",
+    "style-loader": "0.18.2",
+    "tslint": "5.5.0",
     "tslint-loader": "3.5.3",
-    "tslint": "5.1.0",
-    "typescript": "2.3.0",
-    "webpack": "2.4.1",
-    "webpack-dev-server": "2.4.5",
+    "typescript": "2.4.1",
+    "webpack": "3.0.0",
+    "webpack-dev-server": "2.5.0",
     "webpack-merge": "4.1.0"
   }
 }
