--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
     "target": "es5",
+    "outDir": "tester",
     "module": "commonjs",
     "moduleResolution": "node",
     "lib": ["es2015", "es2017", "dom"],
